--- a/index.html
+++ b/index.html
@@ -8,17 +8,35 @@
         <title>Index</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <link rel="stylesheet" href="../css/index.css">
+
     </head>
     <body>
         <h1>Menú</h1>
-    <pre>
-<a href="file:///I:/Git/m08_uf5_pt1/paginasweb/Exercici1.html">visita el exercici 1</a>
+   <table>  
+   <tr>     
 
-<a href="file:///I:/Git/m08_uf5_pt1/paginasweb/Exercici2.html">visita el exercici 2</a>
+    <td> <h2><pre><a href="I:\Git\m08_uf5\paginasweb\Exercici1.html">visita el exercici 1</a></pre></h2> </td> 
 
-<a href="file:///I:/Git/m08_uf5_pt1/paginasweb/Exercici3.html">visita el exercici 3</a>
-   </pre>
-   <p><img src="I:\Git\m08_uf5_pt1\imatges\index.png" alt=""/></p>
+        <td> <h2><pre><a href="I:\Git\m08_uf5\paginasweb\Exercici2.html">visita el exercici 2</a></pre></h2> </td> 
+
+            <td> <h2><pre><a href="I:\Git\m08_uf5\paginasweb\Exercici3.html">visita el exercici 3</a></pre></h2> </td>
+   </tr>
+<tr>
+                <td> <h2><pre><a href="I:\Git\m08_uf5\paginasweb\Exercici6.html">visita el exercici 6</a></pre></h2> </td>
+
+                    <td> <h2><pre><a href="I:\Git\m08_uf5\paginasweb\exercici8.xhtml"> visita el exercici 8 </a></pre></h2> </td>
+
+                        <td> <h2><pre><a href="I:\Git\m08_uf5\paginasweb\formulario.html"> visita nuestro formulario </a></pre></h2> </td>
+    </tr>
+<tr>
+                            <td> <h2><pre><a href="I:\Git\m08_uf5\paginasweb\Horario.html"> visita nuestro Horario </a></pre></h2> </td>
+</tr>
+</table> 
+   <p><img src="I:\Git\m08_uf5\imatges\index.png" alt=""/></p>  
+   
+  
           </body>
     
 </html>
