--- a/paginasweb/exercici8.xhtml
+++ b/paginasweb/exercici8.xhtml
@@ -29,6 +29,6 @@
         </dt>
         <dd>900 900 900</dd>
     </dl>
-     <p><img src="I:\Git\m08_uf5_pt1\imatges\exercici 8.png" alt="comprovacion"/></p>
+     <p><img src="I:\Git\m08_uf5\imatges\exercici 8.png" alt="comprovacion"/></p>
 </body>
         </html>
