--- a/paginasweb/Exercici1.html
+++ b/paginasweb/Exercici1.html
@@ -23,7 +23,7 @@
         <h4>Titular de nivel 4</h4>
         <h5>Titular de nivel 5</h5>
         <h6>Titular de nivel 6</h6>
-        <p><img src="I:\Git\m08_uf5_pt1\imatges\exercici 1.png" alt=""/></p>
+        <p><img src="..\m08_uf5_pt1\imatges\exercici 1.png" alt=""/></p>
     </body>
           
 </html>
