--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
    <table>  
    <tr>     
 
-    <td> <h2><pre><a href="..\m08_uf5\paginasweb\Exercici1.html">visita el exercici 1</a></pre></h2> </td> 
+    <td> <h2><pre><a href="paginasweb\Exercici1.html">visita el exercici 1</a></pre></h2> </td> 
 
-        <td> <h2><pre><a href="..\m08_uf5\paginasweb\Exercici2.html">visita el exercici 2</a></pre></h2> </td> 
+        <td> <h2><pre><a href="paginasweb\Exercici2.html">visita el exercici 2</a></pre></h2> </td> 
 
-            <td> <h2><pre><a href="..\m08_uf5\paginasweb\Exercici3.html">visita el exercici 3</a></pre></h2> </td>
+            <td> <h2><pre><a href="paginasweb\Exercici3.html">visita el exercici 3</a></pre></h2> </td>
    </tr>
 <tr>
-                <td> <h2><pre><a href="..\m08_uf5\paginasweb\Exercici6.html">visita el exercici 6</a></pre></h2> </td>
+                <td> <h2><pre><a href="paginasweb\Exercici6.html">visita el exercici 6</a></pre></h2> </td>
 
-                    <td> <h2><pre><a href="..\m08_uf5\paginasweb\exercici8.xhtml"> visita el exercici 8 </a></pre></h2> </td>
+                    <td> <h2><pre><a href="paginasweb\exercici8.xhtml"> visita el exercici 8 </a></pre></h2> </td>
 
-                        <td> <h2><pre><a href="..\m08_uf5\paginasweb\formulario.html"> visita nuestro formulario </a></pre></h2> </td>
+                        <td> <h2><pre><a href="paginasweb\formulario.html"> visita nuestro formulario </a></pre></h2> </td>
     </tr>
 <tr>
-                            <td> <h2><pre><a href="../m08_uf5/paginasweb/Horario.html"> visita nuestro Horario </a></pre></h2> </td>
-                                <td> <h2><pre><a href="../m08_uf5/paginasweb/pruebas.html">Prueba videos links y subclases</a></pre></h2> </td>
+                            <td> <h2><pre><a href="paginasweb/Horario.html"> visita nuestro Horario </a></pre></h2> </td>
+                                <td> <h2><pre><a href="paginasweb/pruebas.html">Prueba videos links y subclases</a></pre></h2> </td>
 </tr>
 </table> 
-   <p><img src="..\m08_uf5\imatges\index.png" alt=""/></p>  
+   <p><img src="imatges\index.png" alt=""/></p>  
    
   
           </body>
