--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 <tr>
                             <td> <h2><pre><a href="paginasweb/Horario.html"> visita nuestro Horario </a></pre></h2> </td>
                                 <td> <h2><pre><a href="paginasweb/pruebas.html">Prueba videos links y subclases</a></pre></h2> </td>
+                                    <td> <h2><pre><a href="paginasweb/Personajes.html">Personajes</a></pre></h2> </td>
+</tr>
+<tr>
+
+
+
 </tr>
 </table> 
    <p><img src="imatges\index.png" alt=""/></p>  
