--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!--
-    comentaris externs
--->
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="es">
     <head>
         <title>Index</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="stylesheet" href="../css/index.css">
-
-    </head>
+<link rel="stylesheet" href="css/index.css">
+</head>
     <body>
-        <h1>Menú</h1>
-   <table>  
-   <tr>     
+        <div>
+<div class="arriba">
+    <img src="imatges/logo.PNG" alt="logo" class="logo"><h1>Index</h1>
+</div>
+   <div class="derecha">
 
-    <td> <h2><pre><a href="paginasweb\Exercici1.html">visita el exercici 1</a></pre></h2> </td> 
+    <div class="cuadro1"><a href="paginasweb/Exercici1.html">Exercici 1</a></div>
 
-        <td> <h2><pre><a href="paginasweb\Exercici2.html">visita el exercici 2</a></pre></h2> </td> 
+    <div class="cuadro2"><a href="paginasweb/Exercici2.html">Exercici 2</a></div>
 
-            <td> <h2><pre><a href="paginasweb\Exercici3.html">visita el exercici 3</a></pre></h2> </td>
-   </tr>
-<tr>
-                <td> <h2><pre><a href="paginasweb\Exercici6.html">visita el exercici 6</a></pre></h2> </td>
-
-                    <td> <h2><pre><a href="paginasweb\exercici8.xhtml"> visita el exercici 8 </a></pre></h2> </td>
-
-                        <td> <h2><pre><a href="paginasweb\formulario.html"> visita nuestro formulario </a></pre></h2> </td>
-    </tr>
-<tr>
-                            <td> <h2><pre><a href="paginasweb/Horario.html"> visita nuestro Horario </a></pre></h2> </td>
-                                <td> <h2><pre><a href="paginasweb/pruebas.html">Prueba videos links y subclases</a></pre></h2> </td>
-                                    <td> <h2><pre><a href="paginasweb/Personajes.html">Personajes</a></pre></h2> </td>
-</tr>
-<tr>
-
-
-
-</tr>
-</table> 
-   <p><img src="imatges\index.png" alt=""/></p>  
+    <div class="cuadro3"><a href="paginasweb/Exercici3.html">Exercici 3</a></div>
    
-  
+    <div class="cuadro4"><a href="paginasweb/Exercici6.html">Exercici 6</a></div>
+
+    <div class="cuadro5"><a href="paginasweb/exercici8.xhtml">Exercici 8 </a></div>
+
+    <div class="cuadro6"><a href="paginasweb/formulario.html">Formulario </a></div>
+
+   <div class="cuadro9"><a href="paginasweb/personajes.html">Personajes</a></div> 
+    <div class="cuadro7"><a href="paginasweb/Horario.html">Horario </a></div>
+       
+
+   </div>
+   <div class="banner">    
+    <div class="tenor-gif-embed" data-postid="13973731" data-share-method="host" data-width="100%" data-aspect-ratio="0.5742971887550201"><img src="imatges/banner.gif" alt="banner" width="375"></div>>
+  </div>
+
+    <div class="wrapper">
+        <div class="letters"><span class="letter">w</span><span class="letter">e</span><span class="letter">l</span><span class="letter">c</span><span class="letter">o</span><span class="letter">m</span><span class="letter">e</span><span class="letter">/</span><span class="letter">n</span><span class="letter">e</span><span class="letter">w</span><span class="letter">/</span><span class="letter">u</span><span class="letter">s</span><span class="letter">e</span><span class="letter">r</span>
+        </div>
+        <p>Aqui encontraras todos mis trabajos realizados durante esta UF</p>
+      </div>
+   <div class="pie-pagina">
+<p class="pie">Espero que la pagina sea de su agrado</p><p>musicote para acompañar su estadia</p>
+    <embed src="videos/dragon_ball.mp3" autostart="true" loop="true" volume="50" width="1000" height="60">  
+        <img class="comprovacion" src="imatges/index.PNG" width="370">  
+  </div>
+  </div>
           </body>
-    
 </html>
