--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <div class="pie-pagina">
 <p class="pie">Espero que la pagina sea de su agrado</p><p>musicote para acompañar su estadia</p>
     <embed src="videos/dragon_ball.mp3" autostart="true" loop="true" volume="50" width="1000" height="60">  
-        <img class="comprovacion" src="imatges/index.PNG" width="370">  
+        <img class="comprovacion" src="imatges/index.PNG" alt="comprovacion" width="370">  
   </div>
   </div>
           </body>
