--- a/index.html
+++ b/index.html
@@ -24,15 +24,25 @@
 
     <div class="cuadro5"><a href="paginasweb/exercici8.xhtml">Exercici 8 </a></div>
 
+
     <div class="cuadro6"><a href="paginasweb/formulario.html">Formulario </a></div>
 
    <div class="cuadro9"><a href="paginasweb/personajes.html">Personajes</a></div> 
+
     <div class="cuadro7"><a href="paginasweb/Horario.html">Horario </a></div>
+    
+   </br>
+</br>
+
+
+    <div class="cuadro7"><a href="paginasweb/float_pixels.html">float-pixel </a></div>
+
+    <div class="cuadro7"><a href="paginasweb/float_porcentaje.html">float-porcentaje </a></div>
        
 
    </div>
    <div class="banner">    
-    <div class="tenor-gif-embed" data-postid="13973731" data-share-method="host" data-width="100%" data-aspect-ratio="0.5742971887550201"><img src="imatges/banner.gif" alt="banner" width="375"></div>>
+    <div class="tenor-gif-embed" data-postid="13973731" data-share-method="host" data-width="100%" data-aspect-ratio="0.5742971887550201"><img src="imatges/banner.gif" alt="banner" width="375"></div>
   </div>
 
     <div class="wrapper">
@@ -42,7 +52,7 @@
       </div>
    <div class="pie-pagina">
 <p class="pie">Espero que la pagina sea de su agrado</p><p>musicote para acompañar su estadia</p>
-    <embed src="videos/dragon_ball.mp3" autostart="true" loop="true" volume="50" width="1000" height="60">  
+    <embed src="videos/dragon_ball.mp3" autostart="true" loop="true" volume="40" width="465" height="40">  
         <img class="comprovacion" src="imatges/index.PNG" alt="comprovacion" width="370">  
   </div>
   </div>
