--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 </br>
 
 
-    <div class="cuadro7"><a href="paginasweb/float_pixels.html">float-pixel </a></div>
+    <div class="cuadro7"><a href="paginasweb/pixels.xhtml">pixel </a></div>
 
-    <div class="cuadro7"><a href="paginasweb/float_porcentaje.html">float-porcentaje </a></div>
+    <div class="cuadro7"><a href="paginasweb/porcentaje.xhtml">porcentaje </a></div>
        
 
    </div>
@@ -52,7 +52,7 @@
       </div>
    <div class="pie-pagina">
 <p class="pie">Espero que la pagina sea de su agrado</p><p>musicote para acompañar su estadia</p>
-    <embed src="videos/dragon_ball.mp3" autostart="true" loop="true" volume="40" width="465" height="40">  
+    <embed src="videos/dragon_ball.mp3" autostart="true" loop="true" volume="40" width="485" height="40">  
         <img class="comprovacion" src="imatges/index.PNG" alt="comprovacion" width="370">  
   </div>
   </div>
