--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <div class="cuadro7"><a href="paginasweb/Exercici9.html">Exercici9 </a></div>
 
     <div class="cuadro7"><a href="paginasweb/pagina_per_parts">pagina por partes </a></div>
+
+    <div class="cuadro7"><a href="practica 15/index.html">Exercici 15</a></div>
        
 
    </div>
